--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "react-bootstrap": "^2.10.10",
     "react-router-dom": "^7.12.0"
